# coreutils

./: README.md
include/: value_initialized.hpp
loglib/: .gitignore  CMakeLists.txt  clear
loglib/include/log/: .gitignore  cLogsStorage.h  cLogsStream.h  cSyslogStorage.h  logs.h  singleton.h
loglib/src/: cLogsStream.cpp  cSyslogStorage.cpp
